[package]
authors = ["komori-n <ikamat.kmr@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ray-tracing-book"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
rand = "0.8"
rayon = "1.5"
